# zs

./: .gitignore  Cargo.toml
example/: AndroidManifest.xml  Cargo.toml  ndk.h  run.sh
example/java/: MainActivity.java
example/resource/values/: strings.xml
example/source/: lib.rs
source/: cli.rs  lib.rs  main.rs  tools.rs  trace.rs
source/fetch/: mod.rs  unpack.rs
source/setup/: keystore.rs  mod.rs  sysmodules.rs
source/tasks/: deploy.rs  mod.rs  sign.rs
source/utils/: cmd.rs  mod.rs
