[lib]
path = "source/lib.rs"
crate-type = ["cdylib"]
name = "main"

[package]
name = "example-app"
edition = "2024"

[dependencies]
anyhow = { version = "1" }

jni = { git = "https://github.com/jni-rs/jni-rs" }
jni-macros = { git = "https://github.com/jni-rs/jni-rs" }

wgpu = { version = "26", default-features = false, features = ["std", "vulkan"] }
vello = { version = "0.6", default-features = false, features = ["wgpu"] }
velato = { version = "0.8", default-features = false, features = ["wgpu"] }

pollster = { version = "0.4" }

tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-subscriber = { version = "0.3" }

[target.'cfg(target_os = "android")'.dependencies]
tracing_android_trace = { version = "0.1" }
android_logger = { version = "0.15" }
